--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "movie-api",
   "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
+  "description": "andre",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -23,9 +24,11 @@
     "express": "^4.18.2",
     "express-static": "^1.2.6",
     "lodash": "^4.17.21",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "eslint": "^8.29.0"
+    "eslint": "^8.29.0",
+    "nodemon": "^2.0.20"
   }
 }
