--- a/package.json
+++ b/package.json
@@ -4,31 +4,35 @@
   "description": "andre",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+      "test": "echo \"Error: no test specified\" && exit 1",
+      "start": "node index.js",
+      "dev": "nodemon index.js"
   },
   "repository": {
-    "type": "git",
-    "url": "git+https://github.com/mazaflame/movie-api.git"
+      "type": "git",
+      "url": "git+https://github.com/mazaflame/movie-api.git"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/mazaflame/movie-api/issues"
+      "url": "https://github.com/mazaflame/movie-api/issues"
   },
   "homepage": "https://github.com/mazaflame/movie-api#readme",
   "dependencies": {
-    "body-parser": "^1.20.1",
-    "express": "^4.18.2",
-    "express-static": "^1.2.6",
-    "lodash": "^4.17.21",
-    "morgan": "^1.10.0",
-    "uuid": "^9.0.0"
+      "bcryptjs": "^2.4.3",
+      "body-parser": "^1.20.1",
+      "cors": "^2.8.5",
+      "express": "^4.18.2",
+      "express-validator": "^6.14.2",
+      "jsonwebtoken": "^8.5.1",
+      "mongoose": "^6.7.0",
+      "morgan": "^1.10.0",
+      "passport": "^0.6.0",
+      "passport-jwt": "^4.0.0",
+      "passport-local": "^1.0.0",
+      "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "eslint": "^8.29.0",
-    "nodemon": "^2.0.20"
+      "nodemon": "^2.0.20"
   }
 }
